<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coins"
        android:id="@+id/coinsTextTV"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="@+id/coinsTV"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="0"
        android:id="@+id/coinsTV"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <!-- upgrade1 -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        />
    <LinearLayout
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/upgrade1LL"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/upgrade1Text"
            android:layout_marginStart="10dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/upgrade1B"
            android:text="@string/buy"
            android:layout_marginEnd="10dp"
            android:enabled="false"
            android:textSize="10sp"
            />
    </LinearLayout>
    <!-- upgrade2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/upgrade2LL"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/upgrade1LL">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/upgrade2Text"
            android:layout_marginStart="10dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/upgrade2B"
            android:text="@string/buy"
            android:layout_marginEnd="10dp"
            android:enabled="false"
            android:textSize="10sp"
            />
    </LinearLayout>
    <!-- upgrade3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/upgrade3LL"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/upgrade2LL">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/upgrade3Text"
            android:layout_marginStart="10dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/upgrade3B"
            android:text="@string/buy"
            android:layout_marginEnd="10dp"
            android:enabled="false"
            android:textSize="10sp"
            />
    </LinearLayout>
    <!-- upgrade4 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/upgrade4LL"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/upgrade3LL">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/upgrade4Text"
            android:layout_marginStart="10dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/upgrade4B"
            android:text="@string/buy"
            android:layout_marginEnd="10dp"
            android:enabled="false"
            android:textSize="10sp"

            />
    </LinearLayout>
    <!-- upgrade5 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/upgrade5LL"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/upgrade4LL">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/upgrade5Text"
            android:layout_marginStart="10dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/upgrade5B"
            android:text="@string/buy"
            android:layout_marginEnd="10dp"
            android:enabled="false"
            android:textSize="10sp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>